[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fida-normalizer"
version = "0.1.1"
description = "A text normalization package for TTS preprocessing with multi-language support"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FIDA"}
]
keywords = ["text-normalization", "tts", "nemo", "phonemizer", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "phonemizer>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/piercarlo62/fida-normalizer"
Repository = "https://github.com/piercarlo62/fida-normalizer"
Issues = "https://github.com/piercarlo62/fida-normalizer/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["Normalizer*"]

[tool.setuptools.package-data]
Normalizer = ["*.py", "*.json", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
